qn section and some overwidth fixing

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <!-- explore album section-->
             <section class="mt-5">
               <div class="mb-4">
-                <div class="row d-flex justify-content-center">
+                <div class="row w-100 d-flex justify-content-center">
                   <div class="col-md-5">
                     <img src="images/wedding.png" class="img-fluid rounded-start" style="width: 546px;height: 364px;" alt="...">
                   </div>
@@ -223,9 +223,9 @@
 
             <!-- happy client says sec start -->
                  <section>
-                  <h2 class="d-flex justify-content-center  fw-bold " style="font-size: 38px; margin-top: 100px;">Happy Clients says</h2><br>
+                  <h2 class="d-flex  justify-content-center  fw-bold " style="font-size: 38px; margin-top: 100px;">Happy Clients says</h2><br>
 
-                   <div class="row d-flex justify-content-center gap-5 mt-5">
+                   <div class="row w-100 d-flex justify-content-center gap-5 mt-5">
                     <div class="col-md-3 shadow rounded-2 text-center" style="width: 360px;
                     height: 323px; ">
                       <p class="card-text mt-4 text-body-secondary">Slate helps you see how 
@@ -296,11 +296,11 @@
               </div>
               <div class="coll card card-body mt-2" style="width: 552px;" >
                 <p>
-                  <div class="" style="font-weight: 500; font-size: 16px;" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                  <div class="" style="font-weight: 500; font-size: 16px;" data-bs-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample">
                     How early do we need to start planning an event <i class="fa-solid fa-angle-down "  style="margin-left: 135px;"></i>
                   </div>
                 </p>
-                <div class="collapse" id="collapseExample">
+                <div class="collapse" id="collapseExample2">
                   <div class=" text-body-secondary">
                     It's never too soon to start! The time to plan events varies from a few weeks to years. If your event is small, you can probably put it together in a month or two. A good rule of thumb for any major event, from weddings to a company holiday party, is six months.
                   </div>
@@ -308,11 +308,11 @@
               </div>
               <div class="coll card card-body mt-2" style="width: 552px;" >
                 <p>
-                  <div class="" style="font-weight: 500; font-size: 16px;" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                  <div class="" style="font-weight: 500; font-size: 16px;" data-bs-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample">
                     What is your refund and cancellation policy? <i class="fa-solid fa-angle-down"  style="margin-left: 170px;"></i>
                   </div>
                 </p>
-                <div class="collapse" id="collapseExample">
+                <div class="collapse" id="collapseExample3">
                   <div class=" text-body-secondary">
                     We create customized Return & Refund Policy for web, Android & iOS app, Facebook app, Twitter developer account, Squarespace, Blogger, Wordpress, Shopify and more.
                   </div>
@@ -320,11 +320,11 @@
               </div>
               <div class="coll card card-body mt-2" style="width: 552px;" >
                 <p>
-                  <div class="" style="font-weight: 500; font-size: 16px;" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                  <div class="" style="font-weight: 500; font-size: 16px;" data-bs-toggle="collapse" href="#collapseExample4" role="button" aria-expanded="false" aria-controls="collapseExample">
                     How do you keep budgets on track?<i class="fa-solid fa-angle-down " style="margin-left: 233px;"></i>
                   </div>
                 </p>
-                <div class="collapse" id="collapseExample">
+                <div class="collapse" id="collapseExample4">
                   <div class=" text-body-secondary">
                     It’s easier to learn how to stick to a budget if you know how to keep track of your expenses. Here are nine ways to do just that.
                   </div>
